# ACE

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api-reference/: index.html
architecture/: index.html
cli-reference/: index.html
docs/: api-reference.md  architecture.md  cli-reference.md  getting-started.md  index.md
docs/registry/: deployment.md  overview.md  self-hosting.md
examples/: README.md  demo.py  gossip_demo.py  sample_skill.md
getting-started/: index.html
registry/: .dockerignore  Dockerfile  __init__.py  __main__.py  app.py  models.py  routes.py  schema.sql  store.py
registry/deployment/: index.html
registry/overview/: index.html
registry/self-hosting/: index.html
registry/tests/: conftest.py  test_routes.py  test_store.py
search/: search_index.json
src/ace/: __init__.py
src/ace/api/: __init__.py  deps.py  middleware.py  models.py  server.py
src/ace/api/routes/: __init__.py  admin.py  agent.py  discovery.py  gossip.py  transactions.py
src/ace/cli/: __init__.py  main.py
src/ace/cli/commands/: __init__.py  init.py  registry.py  skills.py  start.py  status.py  wallet.py
src/ace/core/: __init__.py  capability.py  config.py  escrow.py  exceptions.py  identity.py  ledger.py  schema.sql  transaction.py
src/ace/discovery/: __init__.py  base.py  centralized.py  gossip.py  gossip_models.py  peer_manager.py  public_registry.py
tests/: conftest.py  test_api.py  test_capability.py  test_cli.py  test_escrow.py  test_gossip.py  test_identity.py  test_ledger.py  test_public_registry.py  test_registry_cli.py  test_transaction.py
