[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-capability-exchange"
version = "0.1.0"
description = "A virtual currency system where AI agents trade capabilities in a marketplace"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ACE Contributors" }]
keywords = [
    "ai",
    "agents",
    "currency",
    "marketplace",
    "capabilities",
    "agent-to-agent",
    "a2a",
    "capability-exchange",
    "agent-marketplace",
    "escrow",
    "ed25519",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "typer[all]>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "build>=1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
ace = "ace.cli.main:app"

[project.urls]
Homepage = "https://github.com/yarrbakr/ACE"
Repository = "https://github.com/yarrbakr/ACE"
Issues = "https://github.com/yarrbakr/ACE/issues"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["ace*", "registry*"]

[tool.setuptools.package-data]
ace = ["core/schema.sql"]
registry = ["schema.sql"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TC"]
ignore = ["E501", "B008", "TC001", "TC002", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["ace", "registry"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["aiosqlite.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "registry/tests"]
asyncio_mode = "auto"
